# StreamDeck-AudioSwitcher

./: CMakeLists.txt  README.md
Sources/: AudioSwitcherStreamDeckPlugin.cpp  AudioSwitcherStreamDeckPlugin.h  ButtonSettings.cpp  ButtonSettings.h  CMakeLists.txt
sdPlugin/propertyinspector/: index.html
